Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
 <p><a href="http://adsabs.harvard.edu/abs/2014Ap%26SS.349..617C">Childress, Vogt, Nielsen, &amp; Sharp (2014), ApSS, 349, 617</a></p>
 
-<p>and save yourself a 2-page data reduction description in your articles !</p>
+<p>and save yourself a 2-page data reduction description in your articles !  </p>
 
 <p>If you use WiFeS data in your research, be sure to cite the Dopita+ instrument papers in your articles:</p>
 
-<p><a href="http://adsabs.harvard.edu/abs/2007Ap%26SS.310..255D">Dopita et al. (2007), ApSS, 310, 255</a>
+<p><a href="http://adsabs.harvard.edu/abs/2007Ap%26SS.310..255D">Dopita et al. (2007), ApSS, 310, 255</a><br>
 <a href="http://adsabs.harvard.edu/abs/2010Ap%26SS.327..245D">Dopita et al. (2010), ApSS, 327, 245</a></p>
       </section>
     </div>
