Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,29 @@
 <p>As of May 2015, the pipeline documentation will be gradually transfered from the initial <a href="http://www.mso.anu.edu.au/pywifes/doku.php?id=start">pywifes wiki</a> to these pages.</p>
 
 <h3>
+<a id="downloading-pywifes" class="anchor" href="#downloading-pywifes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Downloading PyWiFeS</h3>
+
+<p>From version 0.7.1 of PyWiFeS, we have migrated the code to a Github repository. The latest release can be found here: <a href="https://github.com/PyWiFeS/pipeline/releases/latest">https://github.com/PyWiFeS/pipeline/releases/latest</a></p>
+
+<p>Note that you do NOT need to install git or create a Github account to download the code.</p>
+
+<h3>
+<a id="installing-pywifes" class="anchor" href="#installing-pywifes" aria-hidden="true"><span class="octicon octicon-link"></span></a>​Installing PyWiFeS</h3>
+
+<p>1) After downloading PyWiFeS, unzip the archive and save its content anywhere you like.
+2) Add the 'src/' subdirectory to your PYTHONPATH</p>
+
+<p>And voilà !</p>
+
+<hr>
+
+<blockquote>
+<p><em>Note to pre-v0.7.1 PyWiFeS users:</em>  </p>
+
+<p>Prior to v0.7.1, installing PyWiFeS required the definition of the global variable "PYWIFES_DIR". This is <strong>NOT</strong> the case anymore. If you are updating to v0.7.1 or above and have previously defined "PYWFIES_DIR", you can a) update the definition of "PYWIFES_DIR" accordingly or b) remove the definition of "PYWIFES_DIR" altogether (recommended).</p>
+</blockquote>
+
+<h3>
 <a id="acknowledging-pywifes" class="anchor" href="#acknowledging-pywifes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acknowledging PyWiFeS</h3>
 
 <p>We now have a published paper on PyWiFeS. If you used it in your research, please cite: </p>
@@ -53,6 +76,29 @@
 
 <p><a href="http://adsabs.harvard.edu/abs/2007Ap%26SS.310..255D">Dopita et al. (2007), ApSS, 310, 255</a><br>
 <a href="http://adsabs.harvard.edu/abs/2010Ap%26SS.327..245D">Dopita et al. (2010), ApSS, 327, 245</a></p>
+
+<h3>
+<a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support</h3>
+
+<p>+Mailing List</p>
+
+<p>There is a PyWiFeS mailing list (<a href="mailto:pywifes@mso.anu.edu.au">pywifes@mso.anu.edu.au</a>) for users to discuss general issues. The list and also serves as the announcement platform for new code updates. To be added to this list, please contact Jon Nielsen (<a href="mailto:jon.nielsen@anu.edu.au">jon.nielsen@anu.edu.au</a>).</p>
+
+<p>+Error Reporting</p>
+
+<p>We are working on a ticketing system to track code errors. In the meantime, please a) <a href="https://github.com/PyWiFeS/pipeline/issues">raise an issue on Github</a> (preferred) or b) email the PyWiFeS mailing list to report any bugs.</p>
+
+<p>You can see a list of known bugs/planned features <a href="https://github.com/PyWiFeS/pipeline/issues">here</a>.</p>
+
+<h3>
+<a id="the-pywifes-team" class="anchor" href="#the-pywifes-team" aria-hidden="true"><span class="octicon octicon-link"></span></a>The PyWiFeS Team</h3>
+
+<p>PyWiFeS was primarily developed in 2012-2013 by:</p>
+
+<p>Michael Childress (<a href="mailto:michael.childress@anu.edu.au">michael.childress@anu.edu.au</a>)
+Frédéric Vogt (<a href="mailto:frederic.vogt@anu.edu.au">frederic.vogt@anu.edu.au</a>)
+Jon Nielsen (<a href="mailto:jon.nielsen@anu.edu.au">jon.nielsen@anu.edu.au</a>)
+Rob Sharp (<a href="mailto:robert.sharp@anu.edu.au">robert.sharp@anu.edu.au</a>)</p>
       </section>
     </div>
 
