Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,12 +50,15 @@
 <h3>
 <a id="installing-pywifes" class="anchor" href="#installing-pywifes" aria-hidden="true"><span class="octicon octicon-link"></span></a>​Installing PyWiFeS</h3>
 
-<p>1) After downloading PyWiFeS, unzip the archive and save its content anywhere you like.
+<p>1) After downloading PyWiFeS, unzip the archive and save its content anywhere you like.<br>
 2) Add the 'src/' subdirectory to your PYTHONPATH</p>
 
-<p>And voilà !</p>
+<p>And voilà ! To test that it all went according to plan, start a new Python shell, and try to import PyWiFeS. It should not return any errors (you can/should also make sure that you are running the latest PyWiFeS) :</p>
 
-<hr>
+<pre><code>In [1]: import pywifes
+In [2]: pywifes.__version__
+Out[2]: '0.7.2'
+</code></pre>
 
 <blockquote>
 <p><em>Note to pre-v0.7.1 PyWiFeS users:</em>  </p>
@@ -95,10 +98,10 @@
 
 <p>PyWiFeS was primarily developed in 2012-2013 by:</p>
 
-<p>Michael Childress (<a href="mailto:michael.childress@anu.edu.au">michael.childress@anu.edu.au</a>)
-Frédéric Vogt (<a href="mailto:frederic.vogt@anu.edu.au">frederic.vogt@anu.edu.au</a>)
-Jon Nielsen (<a href="mailto:jon.nielsen@anu.edu.au">jon.nielsen@anu.edu.au</a>)
-Rob Sharp (<a href="mailto:robert.sharp@anu.edu.au">robert.sharp@anu.edu.au</a>)</p>
+<p>Michael Childress (<a href="mailto:michael.childress@anu.edu.au">michael.childress@anu.edu.au</a>)<br>
+Frédéric Vogt (<a href="mailto:frederic.vogt@anu.edu.au">frederic.vogt@anu.edu.au</a>)<br>
+Jon Nielsen (<a href="mailto:jon.nielsen@anu.edu.au">jon.nielsen@anu.edu.au</a>)<br>
+Rob Sharp (<a href="mailto:robert.sharp@anu.edu.au">robert.sharp@anu.edu.au</a>)  </p>
       </section>
     </div>
 
