Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -83,11 +83,18 @@ Out[2]: '0.7.2'
 <h3>
 <a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support</h3>
 
-<p>+Mailing List:
-    There is a PyWiFeS mailing list (<a href="mailto:pywifes@mso.anu.edu.au">pywifes@mso.anu.edu.au</a>) for users to discuss general issues. The list and also serves as the announcement platform for new code updates. To be added to this list, please contact Jon Nielsen (<a href="mailto:jon.nielsen@anu.edu.au">jon.nielsen@anu.edu.au</a>).</p>
+<ul>
+<li>
+<p><strong>Mailing List:</strong></p>
 
-<p>+Error Reporting:
-    We are working on a ticketing system to track code errors. In the meantime, please a) <a href="https://github.com/PyWiFeS/pipeline/issues">raise an issue on Github</a> (preferred) or b) email the PyWiFeS mailing list to report any bugs.</p>
+<p>There is a PyWiFeS mailing list (<a href="mailto:pywifes@mso.anu.edu.au">pywifes@mso.anu.edu.au</a>) for users to discuss general issues. The list and also serves as the announcement platform for new code updates. To be added to this list, please contact Jon Nielsen (<a href="mailto:jon.nielsen@anu.edu.au">jon.nielsen@anu.edu.au</a>).</p>
+</li>
+<li>
+<p><strong>Error Reporting:</strong></p>
+
+<p>We are working on a ticketing system to track code errors. In the meantime, please a) <a href="https://github.com/PyWiFeS/pipeline/issues">raise an issue on Github</a> (preferred) or b) email the PyWiFeS mailing list to report any bugs.</p>
+</li>
+</ul>
 
 <p>You can see a list of known bugs/planned features <a href="https://github.com/PyWiFeS/pipeline/issues">here</a>.</p>
 
